# tg-llm-base

./: .env.example  .gitignore  README.en.md  README.md  cli.py  pyproject.toml
src/: __init__.py  app.py  prompt_manager.py  telegram_client.py  vector_store.py
src/prompts/: analysis_prompt.md  answer_format_prompt.md  retrieval_query_format_prompt.md  retrieval_query_prompt.md  tech_spec_prompt.md
